clase 11/ParserNodos/parser.output
Terminales no usados en la gramática

    STRING
    '>'
    ';'
    '='
    NEG


Gramática

    0 $accept: s END

    1 s: cond
    2  | lSentencias

    3 lSentencias: lSentencias sentencia
    4            | sentencia

    5 sentencia: if
    6          | while
    7          | BREAK
    8          | CONTINUE

    9 if: IF '(' cond ')' '{' lSentencias '}' else

   10 else: ELSE '{' lSentencias '}' else
   11     | ELSE if
   12     | ε

   13 while: WHILE '(' cond ')' '{' lSentencias '}'

   14 cond: cond OR cond
   15     | cond AND cond
   16     | operel

   17 operel: expr EQ expr
   18       | expr '<' expr

   19 expr: expr SUMA expr
   20     | expr MENOS expr
   21     | expr '*' expr
   22     | expr '/' expr
   23     | NUMERO
   24     | ID
   25     | '(' expr ')'


Terminales con las reglas donde aparecen

    END (0) 0
    '(' (40) 9 13 25
    ')' (41) 9 13 25
    '*' (42) 21
    '/' (47) 22
    ';' (59)
    '<' (60) 18
    '=' (61)
    '>' (62)
    '{' (123) 9 10 13
    '}' (125) 9 10 13
    error (256)
    NUMERO <std::string> (258) 23
    ID <std::string> (259) 24
    STRING <std::string> (260)
    SUMA (261) 19
    MENOS (262) 20
    OR (263) 14
    AND (264) 15
    EQ (265) 17
    NEG (266)
    IF (267) 9
    ELSE (268) 10 11
    WHILE (269) 13
    BREAK (270) 7
    CONTINUE (271) 8


No terminales con las reglas donde aparecen

    $accept (27)
        on left: 0
    s <AbsExpr*> (28)
        on left: 1 2
        on right: 0
    lSentencias <NT_LSentencias*> (29)
        on left: 3 4
        on right: 2 3 9 10 13
    sentencia <AbsExpr*> (30)
        on left: 5 6 7 8
        on right: 3 4
    if <AbsExpr*> (31)
        on left: 9
        on right: 5 11
    else <AbsExpr*> (32)
        on left: 10 11 12
        on right: 9 10
    while <AbsExpr*> (33)
        on left: 13
        on right: 6
    cond <AbsExpr*> (34)
        on left: 14 15 16
        on right: 1 9 13 14 15
    operel <AbsExpr*> (35)
        on left: 17 18
        on right: 16
    expr <AbsExpr*> (36)
        on left: 19 20 21 22 23 24 25
        on right: 17 18 19 20 21 22 25


Estado 0

    0 $accept: • s END

    NUMERO    desplazar e ir al estado 1
    ID        desplazar e ir al estado 2
    '('       desplazar e ir al estado 3
    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    s            ir al estado 8
    lSentencias  ir al estado 9
    sentencia    ir al estado 10
    if           ir al estado 11
    while        ir al estado 12
    cond         ir al estado 13
    operel       ir al estado 14
    expr         ir al estado 15


Estado 1

   23 expr: NUMERO •

    $default  reduce usando la regla 23 (expr)


Estado 2

   24 expr: ID •

    $default  reduce usando la regla 24 (expr)


Estado 3

   25 expr: '(' • expr ')'

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    expr  ir al estado 16


Estado 4

    9 if: IF • '(' cond ')' '{' lSentencias '}' else

    '('  desplazar e ir al estado 17


Estado 5

   13 while: WHILE • '(' cond ')' '{' lSentencias '}'

    '('  desplazar e ir al estado 18


Estado 6

    7 sentencia: BREAK •

    $default  reduce usando la regla 7 (sentencia)


Estado 7

    8 sentencia: CONTINUE •

    $default  reduce usando la regla 8 (sentencia)


Estado 8

    0 $accept: s • END

    END  desplazar e ir al estado 19


Estado 9

    2 s: lSentencias •
    3 lSentencias: lSentencias • sentencia

    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    $default  reduce usando la regla 2 (s)

    sentencia  ir al estado 20
    if         ir al estado 11
    while      ir al estado 12


Estado 10

    4 lSentencias: sentencia •

    $default  reduce usando la regla 4 (lSentencias)


Estado 11

    5 sentencia: if •

    $default  reduce usando la regla 5 (sentencia)


Estado 12

    6 sentencia: while •

    $default  reduce usando la regla 6 (sentencia)


Estado 13

    1 s: cond •
   14 cond: cond • OR cond
   15     | cond • AND cond

    OR   desplazar e ir al estado 21
    AND  desplazar e ir al estado 22

    $default  reduce usando la regla 1 (s)


Estado 14

   16 cond: operel •

    $default  reduce usando la regla 16 (cond)


Estado 15

   17 operel: expr • EQ expr
   18       | expr • '<' expr
   19 expr: expr • SUMA expr
   20     | expr • MENOS expr
   21     | expr • '*' expr
   22     | expr • '/' expr

    SUMA   desplazar e ir al estado 23
    MENOS  desplazar e ir al estado 24
    EQ     desplazar e ir al estado 25
    '<'    desplazar e ir al estado 26
    '*'    desplazar e ir al estado 27
    '/'    desplazar e ir al estado 28


Estado 16

   19 expr: expr • SUMA expr
   20     | expr • MENOS expr
   21     | expr • '*' expr
   22     | expr • '/' expr
   25     | '(' expr • ')'

    SUMA   desplazar e ir al estado 23
    MENOS  desplazar e ir al estado 24
    '*'    desplazar e ir al estado 27
    '/'    desplazar e ir al estado 28
    ')'    desplazar e ir al estado 29


Estado 17

    9 if: IF '(' • cond ')' '{' lSentencias '}' else

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    cond    ir al estado 30
    operel  ir al estado 14
    expr    ir al estado 15


Estado 18

   13 while: WHILE '(' • cond ')' '{' lSentencias '}'

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    cond    ir al estado 31
    operel  ir al estado 14
    expr    ir al estado 15


Estado 19

    0 $accept: s END •

    $default  aceptar


Estado 20

    3 lSentencias: lSentencias sentencia •

    $default  reduce usando la regla 3 (lSentencias)


Estado 21

   14 cond: cond OR • cond

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    cond    ir al estado 32
    operel  ir al estado 14
    expr    ir al estado 15


Estado 22

   15 cond: cond AND • cond

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    cond    ir al estado 33
    operel  ir al estado 14
    expr    ir al estado 15


Estado 23

   19 expr: expr SUMA • expr

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    expr  ir al estado 34


Estado 24

   20 expr: expr MENOS • expr

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    expr  ir al estado 35


Estado 25

   17 operel: expr EQ • expr

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    expr  ir al estado 36


Estado 26

   18 operel: expr '<' • expr

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    expr  ir al estado 37


Estado 27

   21 expr: expr '*' • expr

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    expr  ir al estado 38


Estado 28

   22 expr: expr '/' • expr

    NUMERO  desplazar e ir al estado 1
    ID      desplazar e ir al estado 2
    '('     desplazar e ir al estado 3

    expr  ir al estado 39


Estado 29

   25 expr: '(' expr ')' •

    $default  reduce usando la regla 25 (expr)


Estado 30

    9 if: IF '(' cond • ')' '{' lSentencias '}' else
   14 cond: cond • OR cond
   15     | cond • AND cond

    OR   desplazar e ir al estado 21
    AND  desplazar e ir al estado 22
    ')'  desplazar e ir al estado 40


Estado 31

   13 while: WHILE '(' cond • ')' '{' lSentencias '}'
   14 cond: cond • OR cond
   15     | cond • AND cond

    OR   desplazar e ir al estado 21
    AND  desplazar e ir al estado 22
    ')'  desplazar e ir al estado 41


Estado 32

   14 cond: cond • OR cond
   14     | cond OR cond •
   15     | cond • AND cond

    AND  desplazar e ir al estado 22

    $default  reduce usando la regla 14 (cond)


Estado 33

   14 cond: cond • OR cond
   15     | cond • AND cond
   15     | cond AND cond •

    $default  reduce usando la regla 15 (cond)


Estado 34

   19 expr: expr • SUMA expr
   19     | expr SUMA expr •
   20     | expr • MENOS expr
   21     | expr • '*' expr
   22     | expr • '/' expr

    '*'  desplazar e ir al estado 27
    '/'  desplazar e ir al estado 28

    $default  reduce usando la regla 19 (expr)


Estado 35

   19 expr: expr • SUMA expr
   20     | expr • MENOS expr
   20     | expr MENOS expr •
   21     | expr • '*' expr
   22     | expr • '/' expr

    '*'  desplazar e ir al estado 27
    '/'  desplazar e ir al estado 28

    $default  reduce usando la regla 20 (expr)


Estado 36

   17 operel: expr EQ expr •
   19 expr: expr • SUMA expr
   20     | expr • MENOS expr
   21     | expr • '*' expr
   22     | expr • '/' expr

    SUMA   desplazar e ir al estado 23
    MENOS  desplazar e ir al estado 24
    '*'    desplazar e ir al estado 27
    '/'    desplazar e ir al estado 28

    $default  reduce usando la regla 17 (operel)


Estado 37

   18 operel: expr '<' expr •
   19 expr: expr • SUMA expr
   20     | expr • MENOS expr
   21     | expr • '*' expr
   22     | expr • '/' expr

    SUMA   desplazar e ir al estado 23
    MENOS  desplazar e ir al estado 24
    '*'    desplazar e ir al estado 27
    '/'    desplazar e ir al estado 28

    $default  reduce usando la regla 18 (operel)


Estado 38

   19 expr: expr • SUMA expr
   20     | expr • MENOS expr
   21     | expr • '*' expr
   21     | expr '*' expr •
   22     | expr • '/' expr

    $default  reduce usando la regla 21 (expr)


Estado 39

   19 expr: expr • SUMA expr
   20     | expr • MENOS expr
   21     | expr • '*' expr
   22     | expr • '/' expr
   22     | expr '/' expr •

    $default  reduce usando la regla 22 (expr)


Estado 40

    9 if: IF '(' cond ')' • '{' lSentencias '}' else

    '{'  desplazar e ir al estado 42


Estado 41

   13 while: WHILE '(' cond ')' • '{' lSentencias '}'

    '{'  desplazar e ir al estado 43


Estado 42

    9 if: IF '(' cond ')' '{' • lSentencias '}' else

    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    lSentencias  ir al estado 44
    sentencia    ir al estado 10
    if           ir al estado 11
    while        ir al estado 12


Estado 43

   13 while: WHILE '(' cond ')' '{' • lSentencias '}'

    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    lSentencias  ir al estado 45
    sentencia    ir al estado 10
    if           ir al estado 11
    while        ir al estado 12


Estado 44

    3 lSentencias: lSentencias • sentencia
    9 if: IF '(' cond ')' '{' lSentencias • '}' else

    '}'       desplazar e ir al estado 46
    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    sentencia  ir al estado 20
    if         ir al estado 11
    while      ir al estado 12


Estado 45

    3 lSentencias: lSentencias • sentencia
   13 while: WHILE '(' cond ')' '{' lSentencias • '}'

    '}'       desplazar e ir al estado 47
    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    sentencia  ir al estado 20
    if         ir al estado 11
    while      ir al estado 12


Estado 46

    9 if: IF '(' cond ')' '{' lSentencias '}' • else

    ELSE  desplazar e ir al estado 48

    $default  reduce usando la regla 12 (else)

    else  ir al estado 49


Estado 47

   13 while: WHILE '(' cond ')' '{' lSentencias '}' •

    $default  reduce usando la regla 13 (while)


Estado 48

   10 else: ELSE • '{' lSentencias '}' else
   11     | ELSE • if

    '{'  desplazar e ir al estado 50
    IF   desplazar e ir al estado 4

    if  ir al estado 51


Estado 49

    9 if: IF '(' cond ')' '{' lSentencias '}' else •

    $default  reduce usando la regla 9 (if)


Estado 50

   10 else: ELSE '{' • lSentencias '}' else

    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    lSentencias  ir al estado 52
    sentencia    ir al estado 10
    if           ir al estado 11
    while        ir al estado 12


Estado 51

   11 else: ELSE if •

    $default  reduce usando la regla 11 (else)


Estado 52

    3 lSentencias: lSentencias • sentencia
   10 else: ELSE '{' lSentencias • '}' else

    '}'       desplazar e ir al estado 53
    IF        desplazar e ir al estado 4
    WHILE     desplazar e ir al estado 5
    BREAK     desplazar e ir al estado 6
    CONTINUE  desplazar e ir al estado 7

    sentencia  ir al estado 20
    if         ir al estado 11
    while      ir al estado 12


Estado 53

   10 else: ELSE '{' lSentencias '}' • else

    ELSE  desplazar e ir al estado 48

    $default  reduce usando la regla 12 (else)

    else  ir al estado 54


Estado 54

   10 else: ELSE '{' lSentencias '}' else •

    $default  reduce usando la regla 10 (else)
